[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "nodetool-lib-network"
version = "0.6.0"
description = "Nodetool Network nodes"
readme = "README.md"
authors = ["Matthias Georgi <matti.georgi@gmail.com>"]
packages = [{ include = "nodetool", from = "src" }]
package-mode = true
include = ["src/nodetool/package-metadata/nodetool-lib-network.json"]
repository = "https://github.com/nodetool-ai/nodetool-lib-network"

[tool.poetry.dependencies]
python = "^3.10"
nodetool-core = { git = "https://github.com/nodetool-ai/nodetool-core.git", rev = "main" }
